[gd_scene load_steps=8 format=2]

[ext_resource path="res://ActionLevels/backgrounds/Bubbles.tscn" type="PackedScene" id=1]
[ext_resource path="res://ActionLevels/LevelStartAnimation.gd" type="Script" id=3]
[ext_resource path="res://Menus/LevelName3DText.tscn" type="PackedScene" id=4]
[ext_resource path="res://ActionLevels/LevelCreator/ScalingBarsGroup.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LevelTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bubbles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bubbles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 432 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bubbles:material:shader_param/Speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Bubbles:material:shader_param/Direction")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WhiteFlash:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "color_gradient_1"
length = 4.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LevelTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bubbles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bubbles:material:shader_param/Speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bubbles:material:shader_param/Direction")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WhiteFlash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.1, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("LevelName3DText")

[node name="LevelStartAnimation" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AnimationPlayerBackgroundGradient" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 2 )
anims/color_gradient_1 = SubResource( 3 )

[node name="LevelName3DText" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 3

[node name="LevelTitle" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -960.0
margin_right = 960.0
margin_bottom = 960.0
texture = SubResource( 10 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ScalingBarsGroup" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 36, 1120 )
rotation = 0.785398
scale = Vector2( -2, -2 )

[node name="Bubbles" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 432 )

[node name="WhiteFlash" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="animation_finished" from="AnimationPlayerBackgroundGradient" to="." method="_on_AnimationPlayerBackgroundGradient_animation_finished"]
[connection signal="visibility_changed" from="LevelTitle" to="." method="_on_LevelTitle_visibility_changed"]
